welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:6: error: not found: value num
    } else if (lookingFor!=num(i)){
                           ^indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 0 to n-1){
         ^